# Industrial-Evolution

./: Cargo.toml  GDD_0.md  GDD_1.md  bing.md
art/: Assemblies Icon-Hover.aseprite  Assemblies Icon-Selected.aseprite  Assemblies Icon.aseprite  End Day Icon Hover.aseprite  End Day Icon Selected.aseprite  End Day Icon.aseprite  End Tutorial Icon-Hover.aseprite  End Tutorial Icon-Selected.aseprite  End Tutorial Icon.aseprite  Hub Icon.aseprite  Hud Icon Hover.aseprite  Hud Icon Selected.aseprite  Hud Icon-Large-Hover.aseprite  Hud Icon-Large-Selected.aseprite  Hud Icon-Large.aseprite  Hud Icon.aseprite  Hud Menu-2.aseprite  Hud Menu-Thin.aseprite  Hud Menu.aseprite  Input Arrow.aseprite  Logo.aseprite  Lumber.aseprite  Next Day Icon.aseprite  Output Arrow.aseprite  Paper Drier Icon.aseprite  Paper Machine Icon Hover.aseprite  Paper Machine Icon Selected.aseprite  Paper Machine Icon.aseprite  Paper Press Icon.aseprite  Paper.aseprite  Pulp Machine Icon Hover.aseprite  Pulp Machine Icon Selected.aseprite  Pulp Machine Icon.aseprite  Pulp Mill Icon.aseprite  Saw Mill Icon Hover.aseprite  Saw Mill Icon Selected.aseprite  Saw Mill Icon.aseprite  Space animation.aseprite  Wood Chipper Icon Hover.aseprite  Wood Chipper Icon Selected.aseprite  (+6 more)
assets/: Wood.aseprite  Worker Menu.aseprite
src/: assemblies.rs  bankrupt.rs  day_cycle.rs  ghost.rs  hud.rs  items.rs  main.rs  opening.rs  player.rs  tile_pathfinding.rs  ui.rs  utils.rs  workers.rs
src/assemblies/: assembly.rs  assembly_items.rs  assembly_production.rs  assembly_types.rs  ghost.rs  mod.rs  power.rs
src/assemblies/assembly_types/: assembly_templates.rs  mod.rs
src/items/: container.rs  exports.rs  imports.rs  mod.rs  receivables.rs  trade_depot.rs
src/items/goods/: good_types.rs  mod.rs
src/items/materials/: mod.rs
src/items/resources/: mod.rs  resource_types.rs
src/money/: mod.rs  upkeep.rs
src/tutorial/: mod.rs
src/workers/: error.rs  job_ui.rs  jobs.rs  mod.rs  worker.rs
web/: index.html  industrial_evolution.js
