[package]
name = "industrial_evolution"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.3", features = [] }
bevy-inspector-egui = "0.20.0"
bevy_ecs_tilemap = "0.11.0"
bevy_input_mapper = "0.0.3"
kayak_ui = { git = "https://github.com/StarArawn/kayak_ui.git", branch = "main" }
paste = "1.0.14"
pathfinding = "4.3.2"
