[package]
name = "industrial_evolution"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Profile for distribution
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.12.1" }
bevy-inspector-egui = "0.22.1"
bevy_ecs_tilemap = { version = "0.12.0", features = ["atlas"] }
bevy_eventlistener = "0.6.1"
kayak_ui = "0.5.0"
paste = "1.0.14"
pathfinding = "4.3.2"
rand = "0.8.5"
